<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OptionsActivity">

    <TextView
        android:id="@+id/czcionkaTextView"
        android:layout_width="374dp"
        android:layout_height="37dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/czcionka_res"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/rozmiarTextView"
        android:layout_width="99dp"
        android:layout_height="38dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:labelFor="@id/IdRozmiarOption"
        android:text="@string/rozmiar_res"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/IdRozmiarOption"
        app:layout_constraintHorizontal_bias="0.567"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/czcionkaTextView" />

    <EditText
        android:id="@+id/IdRozmiarOption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="16dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/wpisz_rozmiar_res"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/czcionkaTextView" />


    <Button
        android:id="@+id/button"
        android:layout_width="303dp"
        android:layout_height="44dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/wybierz_kolor"
        app:layout_constraintBottom_toTopOf="@+id/IdAcceptOptionButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rozmiarTextView"
        app:layout_constraintVertical_bias="0.071" />

    <Button
        android:id="@+id/IdAcceptOptionButton"
        android:layout_width="408dp"
        android:layout_height="59dp"
        android:background="#03A9F4"
        android:onClick="SubmitButtonClick"
        android:text="@string/akceptuj_res"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>